--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.0.2",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
